--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link href="css/media.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/bootstrap-grid.min.css" rel="stylesheet" type="text/css">
+	<link rel="icon" href="favicon.ico">
 	<title>Олег Шарапа Веб-разработка</title>
 </head>
 <body>
