--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/bootstrap-grid.min.css" rel="stylesheet" type="text/css">
 	<link rel="icon" href="favicon.ico">
+	<meta name='freelancehunt' content='ffdfbc8b18e3cf8' />
 	<title>Олег Шарапа Веб-разработка</title>
 </head>
 <body>
